# bf_duke

./: README.md  progdata  summer.cc
Dtest/model_output/: fixed_parameters.txt
andrew/: CMakeLists.txt  andrew.cc  andrew_diffusion.cc  andrew_eos.cc  andrew_hadron.cc  andrew_lattice.cc
andrew/eosdata/: DvsEpsilon.txt  eos_chifactors.txt  eos_hadron_chifactors.txt  eos_hadron_vs_epsilon.txt  eos_lattice_vs_epsilon.txt  eos_vs_epsilon.txt
andrew/figs/: andrew_chi.py  andrew_chiratio.py  andrew_epsilon.py  andrew_s.py
andrew/latticedata_claudia/: c2us.cont
boltzmann/: CMakeLists.txt  boltzmain.cc
boltztest/: bigrunner.sh  qualifiers.txt  runner.sh
boltztest/model_output/: fixed_parameters.txt
boltzudstest/: bigrunner.sh  qualifiers.txt  runner.sh
figs/alicedata/: BFvsphi_KK.txt  BFvsphi_pipi.txt  BFvsphi_pp.txt  BFvsy_KK.txt  BFvsy_pipi.txt  BFvsy_pp.txt  experimental_info.txt  extract_bf_obs.cc  extract_spectra_obs.cc  rearrange_spectra.cc  spectra_K.txt  spectra_p.txt  spectra_pi.txt
figs/alicedata/original/: BFvsphi_KK_original.txt  BFvsphi_pipi_original.txt  BFvsphi_pp_original.txt  BFvsy_KK_original.txt  BFvsy_pipi_original.txt  BFvsy_pp_original.txt  spectra_K_original.txt  spectra_p_original.txt  spectra_pi_original.txt
hydro2udstest/: bigrunner.sh  bigrunner_hydro2uds.sh  qualifiers.txt  runner.sh  runner_hydro2uds.sh
hydrodata/: explanation.txt
modelruns/: fixed_parameters.txt
music-eventgen/models/music-hydro/: CMakeCache.txt  cmake_install.cmake  install_manifest.txt  libmusic.dylib
music-eventgen/models/music-hydro/example_inputfiles/: PCE_short.txt
music-eventgen/models/music-hydro/src/: CMakeLists.txt  HydroinfoMUSIC.cpp  HydroinfoMUSIC.h  advance.cpp  advance.h  cell.h  cmake_install.cmake  cornelius.cpp  data.h  data_struct.h  dissipative.cpp  eos.cpp  eos.h  eos_EOSQ.cpp  eos_EOSQ.h  eos_PCE.cpp  eos_PCE.h  eos_WB.cpp  eos_WB.h  eos_base.cpp  eos_base.h  eos_best.cpp  eos_best.h  eos_hotQCD.cpp  eos_hotQCD.h  eos_hotQCD_unitetest.cpp  eos_idealgas.cpp  eos_idealgas.h  eos_idealgas_unittest.cpp  eos_neos.cpp  eos_neos.h  eos_s95p.cpp  eos_s95p.h  eos_s95p_unittest.cpp  freeze.h  (+20 more)
music-eventgen/testrun/: bigrunner.sh  runmaster.py  trento-average.py  trento-music.sh
music-eventgen/testrun/music-hydro/: install_manifest.txt
notes/: BF_noeq.tex
software/: CMakeLists.txt
software/include/bfduke/: bfcharge.h  bfcommon.h  bfeos.h  bfhyper.h  hydro2uds.h
software/src/: bfeos.cc  eos.cc  hbcharge.cc  hbhyper.cc  hbio.cc  hydro2uds.cc  hyperfind.cc  makepart.cc  mesh.cc  trajectory.cc
software/src/hydro/: eos.cc  hbio.cc  hydro2uds.cc  hyperfind.cc  mesh.cc
software/src_hyperT/: eos.cc  hbcharge.cc  hbio.cc  hydro2uds.cc  hyperfind.cc  mesh.cc  trajectory.cc
spectrav2/: bigrunner.sh  runner.sh
(+11 files in other folders)
